gui almost done, + events